corrected save object issue

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,11 +6,12 @@
 
 <div class="container">
     {{#each data}}
-        <div class="row">
+        <div class="row articleRow">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="article">
                     <div class="articleHeader">
                         <h3 class="date">{{date}}</h3>
+                        <hr>
                         <h1 class="headline">{{headline}}</h1>
                         <h3 class="author">{{author}}</h3>
                     </div>
