--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,10 @@
 		<script src="/assets/js/logic.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+		{{!-- bootswatch  --}}
+		{{!-- <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css"> --}}
+		{{!-- font awesome --}}
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
 		<link rel="stylesheet" href="./assets/css/style.css">
 	</head>
 	<body>
