--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,6 +3,7 @@
   <div class="container">
     <h1 class="display-4">Welcome To DevFlash News</h1>
     <p class="lead">Here we scrape our friends at <a href="https://www.developer-tech.com/">www.developer-tech.com</a> and allow our user to comment and like/dislike the articles. See an interesting headline? Check the comments to make sure its a good read!  </p>
+    <hr class="jumbohr">
   </div>
 </div>
 
