--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 		<title>MongoNewsScrapper</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
+		<script src="http://momentjs.com/downloads/moment-with-locales.min.js"></script>
 		<script src="/assets/js/logic.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
