new momment link

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,7 @@
 		<title>MongoNewsScrapper</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		{{!-- momment js --}}
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.0/locale/af.js"></script>
-		<script src="/assets/js/logic.js"></script>
+		<script src="https://momentjs.com/downloads/moment.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 		{{!-- font awesome --}}
@@ -15,5 +14,6 @@
 	</head>
 	<body class="bg">
 		{{{ body }}}
+	<script src="/assets/js/logic.js"></script>
 	</body>
 </html>
